[package]
name = "carla"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
polling = {version = "3.8.0", features = []}
once_cell = "1.21.3"
carla_macros = {path = "src/crates/carla_macros"}
rand = "0.9.1"

[workspace]
members = ['src/crates/carla_macros', 'examples/simple_http']

[features]
macros = []
